# nba-integrity

./: .gitignore  NBA SRP Appendix A.md  NBA Stewardship Reform Plan.md  dashboard.py  pyproject.toml  requirements.txt  tii.py
data/: activity_log.jsonl  cases.json
data/computed/: case_A.json  case_B.json  case_C.json  case_D.json  case_E.json  case_F.json  case_G.json  case_H.json
pages/: 0_TII_Calibration_Dashboard.py  1_Appendix_E_Scenario_Walkthroughs.py  2_Appendix_D_ETP_Simulator.py  3_Appendix_B_SP_Scoring_Matrix.py  4_Appendix_C_SSL_Prize_Structure.py  5_Appendix_F_Implementation_Timeline.py  6_Plan_Overview.py
tii/: activity.py  cache.py  case_prefs.py  cases_store.py  cli.py  config.py  rate_limit.py  team_lookup.py
tii/compute/: btca.py  composite.py  elimination.py  nrci.py  ris.py  sas.py  supplemental.py
tii/ingest/: box_scores.py  game_logs.py  historical.py  player_stats.py  splits.py  standings.py  team_season.py
tii/render/: markdown.py
