[project]
name = "tii-backtesting"
version = "0.1.0"
description = "Tanking Integrity Index historical backtesting tool"
requires-python = ">=3.10"

dependencies = [
    "nba_api>=1.4",
    "pandas>=2.0",
    "click>=8.0",
    "jinja2>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["tii*"]

[project.scripts]
tii = "tii.cli:cli"
